v3/17_exercises.md
# 第12章 演習問題

各章の理解を確認・拡張する問題集。難易度 ★（基本）/ ★★（応用）/ ★★★（発展）。

## 第1–2章：Markowitz と効率的フロンティア

**問題 1.1（★）**
2 資産（$\mu = (0.08, 0.12)^\top$、$\sigma_1 = 0.15$、$\sigma_2 = 0.25$、相関 $\rho = 0.3$）について、GMV ポートフォリオの重みと分散を求めよ。

**問題 1.2（★★）**
$\Sigma = \sigma^2 I_n$（独立同分散）のとき、効率的フロンティアを陽に表せ。$n \to \infty$ で何が起こるか考察せよ。

**問題 1.3（★★★）**
ショート禁止制約 $w \ge 0$ の下で、効率フロンティアが **区分的双曲線** であることを active set 分析で示せ。

**問題 2.1（★）**
3 資産で $r_f = 0.02$、$\mu = (0.06, 0.10, 0.14)^\top$、$\Sigma = \mathrm{diag}(0.01, 0.04, 0.09) + 0.005\, \mathbf{1}\mathbf{1}^\top$ とする。接線ポートフォリオを計算し、最大シャープ比を求めよ。

**問題 2.2（★★）**
ゼロ β 同伴ポートフォリオの期待リターン公式（命題 2.2）を導出せよ。

## 第3–4章：分離定理と CAPM

**問題 3.1（★）**
リスク回避度 $\gamma$ の二次効用について、無リスク資産と接線ポートフォリオへの配分比を求めよ。

**問題 4.1（★★）**
$n$ 資産のリターンを観測した。サンプル共分散行列の固有値構造から市場ポートフォリオを推定する手順を Fama–MacBeth 二段階回帰の枠組みで述べよ。

**問題 4.2（★★★）**
Roll 批判の数学的内容を述べ、観測されたプロキシポートフォリオが効率的でない場合に、CAPM 検定の null 仮説が成立しないことを示せ。

## 第5章：APT

**問題 5.1（★★）**
2 ファクターモデル $R_i = \mu_i + b_{i1} f_1 + b_{i2} f_2 + \varepsilon_i$ で $n \to \infty$ における裁定ポートフォリオを陽に構築し、定理 5.1 の証明を補強せよ。

**問題 5.2（★★）**
Fama–French 3 因子モデルの月次データ（Kenneth French のウェブサイトから取得可能）を用いて、ある産業ポートフォリオの α を推定する Python コードを書け。

## 第6–7章：効用理論と確率支配

**問題 6.1（★）**
CRRA 効用 $u(c) = c^{1-\gamma}/(1-\gamma)$ について ARA, RRA を計算し、$\gamma \to 1$ で対数効用になることを示せ。

**問題 6.2（★★）**
リターンが対数正規分布 $\log(1 + R) \sim \mathcal{N}(m, s^2)$ のとき、CRRA 効用最大化問題を解いて最適投資比率を求めよ。

**問題 7.1（★★）**
$X \sim \mathrm{Uniform}(0,1)$、$Y \sim \mathrm{Beta}(2, 2)$ について FSD/SSD 関係を判定せよ。

**問題 7.2（★★★）**
平均分散効率なポートフォリオが SSD 効率でない反例を構築せよ。

## 第8章：リスク尺度

**問題 8.1（★）**
$L \sim \mathcal{N}(\mu, \sigma^2)$ について $\mathrm{VaR}_\alpha$ と $\mathrm{CVaR}_\alpha$ を陽に求めよ。

**問題 8.2（★★）**
8.3 節の反例（独立デフォルト債）を一般化し、VaR が劣加法性を破るパラメタ範囲を特定せよ。

**問題 8.3（★★★）**
Rockafellar–Uryasev の補助関数 $F_\alpha(w, \zeta)$ が $\zeta$ について凸であり、最小値が CVaR に等しいことを証明せよ。

## 第9章：Black–Litterman

**問題 9.1（★★）**
3 資産で view が「資産 1 と 2 の平均は資産 3 より 3% 高い」とするとき、$P, Q$ を書き下し、$\Omega$ を He–Litterman 法で設定する手順を示せ。

**問題 9.2（★★★）**
事後分布の式 9.4 を完全平方の整理から導出せよ。

## 第10章：連続時間最適化

**問題 10.1（★★）**
CRRA 効用の Merton 問題で値関数 $V(t, x) = h(t) x^{1-\gamma}/(1-\gamma)$ と推測し、$h(t)$ の ODE を導け。

**問題 10.2（★★★）**
2 危険資産・確率ボラティリティ（Heston モデル）の最適投資問題で、ヘッジ需要項を陽に書き下せ。

**問題 10.3（★★★）**
Cox–Huang のマーチンゲール法を用いて、CRRA 投資家の終末富と消費を陽に求めよ。

## 第11章：パフォーマンス評価

**問題 11.1（★）**
年率 Sharpe 比 0.8 のファンドを、5% 有意水準で「skill > 0」と検出するに必要な最低期間（年）を概算せよ。

**問題 11.2（★★）**
独立に 1000 通りの戦略をバックテストし、最大の標本 Sharpe を選んだ。真の Sharpe がすべてゼロのとき、その期待値の概算式を示せ。

**問題 11.3（★★）**
Sortino 比、Calmar 比、Sharpe 比のいずれが「ヘッジファンドのパフォーマンス比較」に最適か議論せよ。

## 総合演習

**問題 T.1（★★★）**
S&P 500 構成銘柄の日次リターン（過去 10 年）から共分散行列を推定し、(a) 標本共分散、(b) Ledoit–Wolf 縮約、(c) Fama–French 3 因子モデルベースで、それぞれ接線ポートフォリオを構築せよ。アウト・オブ・サンプル Sharpe を比較せよ。

**問題 T.2（★★★）**
Black–Litterman ベイズフレームワークを用いて、グローバル株式・債券・コモディティの戦略的アセットアロケーションを設計せよ。市場ポートフォリオ・自身の view・$\Omega$ の選択を明示し、ポートフォリオの感度解析を行え。

**問題 T.3（★★★）**
Merton 問題に税金（短期/長期キャピタルゲイン税の違い）を導入したときの最適政策を考察せよ。理論的考察と数値シミュレーションの両方を行え。

## 第12章：縮小推定

**問題 12.1（★★）**
$\Sigma = I$ で $p = T = 100$ のとき、Marčenko–Pastur 分布の最大・最小固有値の理論値を計算し、シミュレーションで確認せよ。

**問題 12.2（★★★）**
Ledoit–Wolf 線形縮小強度の oracle 式を Frobenius 損失のバイアス–分散分解から導出せよ。標本から推定する $\hat\alpha$ の表式も書け。

## 第13章：ロバスト最適化

**問題 13.1（★★）**
楕円体不確実性 $(\mu - \hat\mu)^\top \Theta^{-1} (\mu - \hat\mu) \le \kappa^2$ の下で $\min_\mu w^\top \mu = w^\top \hat\mu - \kappa \sqrt{w^\top \Theta w}$ を Cauchy–Schwarz から示せ。

**問題 13.2（★★★）**
Garlappi–Uppal–Wang の閉形式縮小を、Bayesian 事前 $\mu \sim \mathcal{N}(\hat\mu, \Sigma/\tau)$ と max–min 効用から導出せよ。

## 第14章：Risk Parity と HRP

**問題 14.1（★）**
3 資産で $\sigma_1 = 0.10$, $\sigma_2 = 0.20$, $\sigma_3 = 0.30$, 相関すべて $0.3$ のとき、ERC ポートフォリオを数値的に求めよ。

**問題 14.2（★★）**
凸プログラム $\min_y \tfrac{1}{2} y^\top \Sigma y - \sum \log y_i$ の最適性条件から ERC 条件を導け。一意性を示せ。

**問題 14.3（★★★）**
HRP を Python で実装し、S&P500 銘柄サブセットで GMV（LW縮小）、ERC、HRP の OOS Sharpe を比較せよ。期間・銘柄選択への感度を議論せよ。

## 第15章：因子動物園・機械学習

**問題 15.1（★）**
$N = 316$ ファクター、$\alpha = 0.05$ のとき、Bonferroni 補正後の $t$ 閾値を求めよ。BH 法と比較せよ。

**問題 15.2（★★★）**
Gu–Kelly–Xiu 風に、scikit-learn と LightGBM で月次リターン予測を実装せよ。線形回帰・ランダムフォレスト・ニューラルネットを比較し、特徴量重要度を分析せよ。

## 第16章：バックテスト過剰適合

**問題 16.1（★）**
$N = 1000$, $\sigma_{\rm SR} = 0.5$ のとき、Bailey–López de Prado の Euler 補正式と $\sigma_{\rm SR}\sqrt{2 \log N}$ の差を計算せよ。

**問題 16.2（★★）**
CSCV による PBO 推定を Python で実装し、ランダム生成された 100 戦略について PBO を計算せよ。

---
[← 第11章](11_performance_evaluation.md) ｜ [トップへ](README.md)
